finished navigation bar/logo styling for 3 screen sizes. index.html started. known issues: text float around picture on About page. nav right-side break on larger screen sizes.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,18 @@
 * {
     font-family: 'Doppio One', sans-serif;
+    color: #DDDDDD !important;
 
 }
 
+body  {
+    background-image: url(bg.jpg);
+    background-size: 65%;
+    background-blend-mode: color;
+    background-color: rgba(238, 238, 238, 0.81) !important;
+}
+
 #logo-font {
-    color: #f9f9f9;
+    color: #f9f9f9 !important;
     font-size: x-large;
 }
 
@@ -12,6 +20,16 @@
     background-color: #59AAA5;
 }
 
-.bordered{
-    border-right: 1px solid #ccc;
+.divider{
+    font-weight: lighter;
+    color: ;
+}
+
+.border-bottom{
+    color: #DDDDDD;
+    border-width: thick;
+}
+
+a {
+    font-size: smaller;
 }
